2008-04-29  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* DragAndDropTest.cs: New test.

2008-04-28  Jonathan Pobst  <monkey@jpobst.com>
	
	* ScrollBarTest.cs: Add test for bug #384182.

2008-04-24  Jonathan Pobst  <monkey@jpobst.com>

	* InputLanguageTest.cs: Add test for bug #373871.

2008-04-23  Ivan N. Zlatev  <contact@i-nz.net>

	* ControlTest.cs: Remove the focusing tests from the validation 
	test. They fail on X11 anyway due to a long standing X11 visibility 
	asynchronicity problem in MWF. The Vaildation test do pass.

2008-04-23  Jonathan Pobst  <monkey@jpobst.com>

	* DataGridViewRowHeaderTest.cs: Comment font dependent tests.

2008-04-23  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* DragAndDropTest.cs: New dnd tests.

2008-04-22  Jonathan Pobst  <monkey@jpobst.com>

	* DataGridViewRowHeaderTest.cs: Add some tests for new
	functionality.

2008-04-21  Jonathan Pobst  <monkey@jpobst.com>

	* TreeView.cs: Add tests for bug #382028.

2008-04-21  Gert Driesen  <drieseng@users.sourceforge.net>

	* ControlTest.cs: Enabled test for bug #330501.

2008-04-14  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* CurrencyManagerTest.cs: New 2.0 IsBinding test.

2008-04-12  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* BindingTest.cs: Enable some more tests.

2008-04-11  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* BindingTest.cs: Enable IsBindingTest.

2008-04-09  Jonathan Pobst  <monkey@jpobst.com>

	* DataGridViewImageCellTest.cs: Add.

2008-04-08  Jonathan Pobst  <monkey@jpobst.com>

	* DataGridViewCheckBoxCellTest.cs: Add.

2008-04-06  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* BindingSourceTest.cs: Enable some old not working tests.

2008-04-06  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* DataBindingTests.cs: Enable some CurrencyManager tests.

2008-04-05  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* BindingSourceTest.cs: Add new tests for GetRelatedCurrencyManager
	method.
